# mindstate

./: Dockerfile  Dockerfile.db  Dockerfile.mcp  Dockerfile.repl  LICENSE  README.md  REPL-MANUAL.md  docker-compose.yml  example.env  init-mindstate.sql  pyproject.toml  run_db_container.sh  test-data-set.cypher
deprecated/: cypher_llm_repl.py  cypher_repl.py
docs/: From Open Brain to Mindstate: An Experiment in External AI Memory.md  MindState-first-design-thoughts.md  mindstate-current-technical-architecture.md  tristore-current-technical-architecture.md
docs/deprecated/: MindState-agent-behaviour.md  implementation-status-post-feature-0002.md
docs/features/: feature-0001-rebase-architecture-into-mindstate.md  feature-0002-add-mindstate-api-ui.md  feature-0003-add-contextualization.md  feature-0003-implement-mindstate-mcp.md  feature-0004-implement-mindstate-mcp.md
mindstate/: api.py  cli.py  commands.py  config.py  contextualizer.py  db.py  logging_utils.py  memory_db.py  memory_models.py  memory_service.py  tui.py
mindstate/mcp/: __init__.py  server.py  tools.py
openspec/changes/add-graph-contextualization/: design.md  proposal.md  tasks.md
openspec/changes/add-mindstate-api-ui/: tasks.md
openspec/changes/implement-mindstate-mcp/: proposal.md  tasks.md
openspec/changes/rebase-architecture-into-mindstate/: design.md  proposal.md  tasks.md
openspec/specs/application-identity/: spec.md
tests/: test_api.py  test_api_smoke.py  test_commands.py  test_contextualization.py  test_contextualizer_unit.py  test_mcp_features.py  test_memory_persistence.py  test_memory_service.py
(+37 files in other folders)
